--- a/sass/modules/village/_feed.scss
+++ b/sass/modules/village/_feed.scss
@@ -128,15 +128,16 @@ $post-icon-width: rhythm(2.5);
   @extend %icon;
   @extend %icon-bubble;
   &:before {
-    @include adjust-font-size-to($medpx);
     @include border-radius($box-padding);
     @include inset;
     float: left;
     width: rhythm(1);
+    height: rhythm(1.5);
     margin-left: - $post-icon-width;
-    padding: rhythm(.25) rhythm(.5);
+    padding: rhythm(.5) rhythm(.5) 0;
     background: $base;
     color: $base3;
+    font-size: $medpx;
     text-align: center;
   }
 
@@ -200,10 +201,7 @@ $post-icon-width: rhythm(2.5);
   a {
     @extend %icon;
     @extend %icon-attachment;
-    &:before {
-      @include adjust-font-size-to($xxxsmallpx,.75);
-      vertical-align: top;
-    }
+    &:before { font-size: $xxxsmallpx; }
   }
 
   + .post-text { @include leader(.25); }
